--- a/etc/tomcat/Dockerfile
+++ b/etc/tomcat/Dockerfile
@@ -4,4 +4,4 @@ COPY tomcat-users.xml /usr/local/tomcat/conf/
 COPY spring-boot-starter-tomcat-1.5.2.RELEASE.jar /usr/local/tomcat/lib/
 
 CMD ["catalina.sh", "run"]
-CMD ["/bin/bash"]
+#CMD ["/bin/bash"]
