--- a/etc/config.cfg
+++ b/etc/config.cfg
@@ -1,7 +1,8 @@
 {
-    #put your configuration here in PERL HASH syntax
-    user => 'script',
-    password => 'pass',
-    hostname => 'localhost',
-    port     => '8888'
-};
+  'hostname' => 'localhost',
+  'war' => 'app/target/test-app-1.0-SNAPSHOT.war',
+  'user' => 'script',
+  'password' => 'pass',
+  'port' => 8080,
+  'path' => '/app'
+}
